--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        First Project
+        First Project - Changed by Other People
     </body>
 </html>
